--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="navbar-brand" style="margin-left: 60px;" >
-        <img src="./image/logo spa.jpg" alt="" width="60px" height="60px">
+        <img src="./image/logo temporaria.png" width="200px" height="80px">
         </div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
@@ -398,7 +398,7 @@
 
      <!-- Carrocel imanes e botões -->
 
-     <div id="meucarrossel" class="carousel slide text-center" data-ride="carousel">
+     <div id="meucarrossel" class="carousel slide text-center" data-ride="carousel" style="font-family: inherit monospace;">
 
         <ul class="carousel-indicators">
             <li data-targert="#meucarrossel" data-slide-to="0" class="active"></li>
@@ -414,26 +414,23 @@
                     espaço de beleza</h1>
                     <div class="pt-3">
                         <button class="mybutton">Saber Mais</button>
-                        <button class="mybutton">Saber Mais</button>
                     </div>
             </div>
 
             <div class="carousel-item" style="color: #f7f7f7; background:rgba(0, 0, 0, 0.3)url(./image/spa-therapy1.jpeg); 
             background-repeat: none; background-size: cover; background-blend-mode: darken; padding-top: 15%; padding-bottom: 15%;" >
-                <h3 style="font-size: 3vw; padding-bottom: 40px;">Venha cuidar de voce</h2>
+                <h3 style="font-size: 3vw; padding-bottom: 40px;">VENHA CUIDAR DE VOCÊ</h2>
                 <h1 style="font-size: 5vw; padding-bottom: 40px;" >O melhor tratamento estetico <br> em todo o brasil</h1>
                     <div class="pt-3">
-                        <button class="mybutton">Saber Mais</button>
                         <button class="mybutton">Saber Mais</button>
                     </div>
             </div>
 
              <div class="carousel-item" style="color: #f7f7f7; background:rgba(0, 0, 0, 0.3)url(./image/spa-therapy2.jpg); 
              background-repeat: none; background-size: cover; background-blend-mode: darken; padding-top: 15%; padding-bottom: 15%;" >
-                 <h3 style="font-size: 3vw; padding-bottom: 40px;">Equipamentos de primeira</h2>
-                 <h1 style="font-size: 5vw; padding-bottom: 40px;" >Nosso profissionais estao preparados <br> com o melhor para voce</h1>
+                 <h3 style="font-size: 3vw; padding-bottom: 40px;">EQUIPAMENTO DE PRIMEIRA</h2>
+                 <h1 style="font-size: 5vw; padding-bottom: 40px;" >profissionais preparados <br> com o melhor</h1>
                      <div class="pt-3">
-                         <button class="mybutton">Saber Mais</button>
                          <button class="mybutton">Saber Mais</button>
                      </div>
              </div>
@@ -457,17 +454,14 @@
 
             <div class=" d-md-flex row text-center" >
                 <div class="col-md pt-5 pl-3">
-                    <h5>LUXURY SPA TREATMENTS</h5>
-                    <h4>Revitalise Your Mind, Body And Spirit
-                        With The Luxury Spa.</h1>
+                    <h5>TRATAMENTOS SPA DE LUXO</h5>
+                    <h4>Revitalize sua mente, corpo e espírito <br> com o spa de luxo.</h1>
                 </div>
 
                 <div  class="col-md pt-5 pb-3">
-                    <h5>O Palestrante</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eius
-                        mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.</p>
+                    <h5>UMA CALOROSA RECEPÇÃO</h5>
+                    <p>Nós da Dream Spa prestamos diversos serviços à natureza dos clientes. Deseje como você gostaria de passar o
+                        tempo aqui podemos conversar e chegar a uma conclusão.</p>
 
                         <div class="pt-3">
                             <button class="mybutton">Saber Mais</button>
@@ -482,8 +476,7 @@
         <div class=" d-md-flex pt-5 row justify-content-md-center">
                 <div class="fade-in-up-1 col-md m-5 myitem text-center">
                     <img src="./image/icon_0.png" width="200px" height="200px" alt="Responsive image" class="myimg rounded-circle p-5">
-                    <h4>Beauty & Clinic
-                        Service</h4>
+                    <h4>Tratamento dos fios</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adip
                         isicing elit, sed do eiusmod tempor incididunt
                         ut labore et dolore magna aliqua.</p>
@@ -491,8 +484,7 @@
 
                 <div class="fade-in-up-2 col-md m-5 myitem text-center">
                     <img src="./image/icon_1.png" width="200px" height="200px" alt="Responsive image" class="myimg rounded-circle p-5">
-                    <h4>Beauty & Clinic
-                        Service</h4>
+                    <h4>Cortes e penteados</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adip
                         isicing elit, sed do eiusmod tempor incididunt
                         ut labore et dolore magna aliqua.</p>
@@ -500,8 +492,7 @@
 
                 <div class="fade-in-up-3 col-md m-5 myitem text-center">
                     <img src="./image/icon_2.png" width="200px" height="200px"width="200px" height="200px"width="200px" height="200px" alt="Responsive image" class="myimg rounded-circle p-5">
-                    <h4>Beauty & Clinic
-                        Service</h2>
+                    <h4>Makeup </h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adip
                         isicing elit, sed do eiusmod tempor incididunt
                         ut labore et dolore magna aliqua.</p>
@@ -511,8 +502,7 @@
         <div class=" d-md-flex pt-5 row justify-content-md-center">
             <div class="fade-in-up-2 col-md m-5 myitem text-center">
                 <img src="./image/icon_3.png" width="200px" height="200px" alt="Responsive image" class="myimg rounded-circle p-5">
-                <h2>Beauty & Clinic
-                    Service</h2>
+                <h4>Cuidados com a pele</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adip
                     isicing elit, sed do eiusmod tempor incididunt
                     ut labore et dolore magna aliqua.</p>
@@ -520,17 +510,15 @@
 
             <div class="fade-in-up-3 col-md m-5 myitem text-center">
                 <img src="./image/icon_4.png" width="200px" height="200px" alt="Responsive image" class="myimg rounded-circle p-5">
-                <h2>Beauty & Clinic
-                    Service</h2>
+                <h4>Cuidados com as unhas</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adip
                     isicing elit, sed do eiusmod tempor incididunt
                     ut labore et dolore magna aliqua.</p>
             </div>
 
             <div class="fade-in-up-1 col-md m-5 myitem text-center">
-                <img src="./image/icon_5.png" width="200px" height="200px" alt="Responsive image" class="myimg rounded-circle p-5">
-                <h2>Beauty & Clinic
-                    Service</h2>
+                <img src="./image/icon_9.png" width="200px" height="200px" alt="Responsive image" class="myimg rounded-circle p-5">
+                <h4>Estética facil e corporal</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adip
                     isicing elit, sed do eiusmod tempor incididunt
                     ut labore et dolore magna aliqua.</p>
@@ -548,8 +536,8 @@
             <div class="row justify-content-md-center">
                 <div class="font-weight-bold col col-lg-8" style="color: #f7f7f7;">
                     <div class="fade-in-down">
-                        <h5 class="col-sm">LUXURY SPA SERVICE</h5>
-                        <h3 class="col-sm">Quiet Service Salon, Spa Massage Service Providor Center.</h3>
+                        <h5 class="col-sm">Serviço de spa de luxo</h5>
+                        <h3 class="col-sm">Sua beleza e sucesso começa aqui</h3>
                     </div>
 
                     <div class="fade-in-up-1" style="transition: 0.8s all ease;">
@@ -572,7 +560,7 @@
     <!-- serviços -->
 
     <div class="text-center pb-5 ">
-        <h3 class="font-weight-bolder" style="padding-top: 100px; color: #000000; font-family: inherit monospace;">SERVIÇOS</h3>
+        <h3 class="font-weight-bolder" style="padding-top: 100px; color: #000000; font-family: inherit monospace;">CONHEÇA</h3>
         <h2 class="font-weight-bolder" style="padding-bottom: 20px; color: #000000; font-family: inherit monospace;">NOSSOS TRATAMENTOS</h2>
             <div class="row pt-5" >
                 <div class="col-md m-1 fade-in bgAnim0" style="color: #f7f7f7; transition: 0.5s all ease;
@@ -693,7 +681,7 @@
 
     <div style="text-align: center; background-image: url('./image/background_therapy.jpg'); background-repeat: no-repeat;
      background-size: cover;" >
-        <h3 class="font-weight-bolder" style="padding-top: 100px; color: #000000; font-family: inherit monospace;">LOGO</h3>
+        <h3 class="font-weight-bolder" style="padding-top: 100px; color: #000000; font-family: inherit monospace;">VIDEO</h3>
         <h2 class="font-weight-bolder" style="padding-bottom: 20px; color: #000000; font-family: inherit monospace;">NOSSO ESPAÇO</h2>
         <div style="padding-bottom: 40px;">
             <div class="embed-responsive embed-responsive-21by9">
@@ -706,13 +694,13 @@
     <!-- planos -->
 
     <div class="container">
-        <div style="text-align: center;">
-            <h3 class="font-weight-bolder" style="padding-top: 100px; color: #000000; font-family: inherit monospace;">LOGO</h3>
-        <h2 class="font-weight-bolder" style="padding-bottom: 20px; color: #000000; font-family: inherit monospace;">NOSSO ESPAÇO</h2>
+        <div class="pt-5" style="text-align: center;">
+            <img src="./image/lotus.png" width="180px" height="100px">
+        <h2 class="pt-5 font-weight-bolder" style="padding-bottom: 20px; color: #000000; font-family: inherit monospace;">PLANOS</h2>
         </div>    
             <div class=" d-md-flex pt-5 row justify-content-md-center">
-                <div class="col-md myitem text-center">
-                    <img src="./image/ico_escova.png" alt="Responsive image" class="myimg rounded-circle p-5">
+                <div class="col-md myitem text-center fade-in-right" style="transition: 0.5s all ease;">
+                    <img src="./image/icon_6.png" alt="Responsive image" class="myimg rounded-circle p-5">
                     <h3>Beauty & Clinic
                         Service</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adip
@@ -720,8 +708,8 @@
                         ut labore et dolore magna aliqua.</p>
                 </div>
 
-                <div class="col-md myitem text-center">
-                    <img src="./image/ico_escova.png" alt="Responsive image" class="myimg rounded-circle p-5">
+                <div class="col-md myitem text-center fade-in-right" style="transition: 1s all ease;">
+                    <img src="./image/icon_7.png" alt="Responsive image" class="myimg rounded-circle p-5">
                     <h3>Beauty & Clinic
                         Service</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adip
@@ -729,8 +717,8 @@
                         ut labore et dolore magna aliqua.</p>
                 </div>
 
-                <div class="col-md myitem text-center">
-                    <img src="./image/ico_escova.png" alt="Responsive image" class="myimg rounded-circle p-5">
+                <div class="col-md myitem text-center fade-in-right" style="transition: 1.5s all ease;">
+                    <img src="./image/icon_8.png" alt="Responsive image" class="myimg rounded-circle p-5">
                     <h3>Beauty & Clinic
                         Service</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adip
@@ -757,8 +745,7 @@ s
                     <div class=" d-flex m-2 p-5" style="color: #f7f7f7; background:rgba(0, 0, 0, 0.4)url(./image/blog_1.jpg); 
                     background-repeat: none; background-size: cover; background-blend-mode: darken; padding-top: 15%; padding-bottom: 15%;">
                         <div style="color: #ffffff;">
-                            <h3>Beauty & Clinic <br>
-                                Service</h3>
+                            <h3>Agora você pode ...</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adip
                                 isicing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua</p>
@@ -768,7 +755,7 @@ s
                     <div class=" d-flex m-2 p-5" style="color: #f7f7f7; background:rgba(0, 0, 0, 0.4)url(./image/blog_2.jpg); 
                     background-repeat: none; background-size: cover; background-blend-mode: darken; padding-top: 15%; padding-bottom: 15%;">
                         <div style="color: #ffffff;">
-                            <h3>Novidades venha ver</h3>
+                            <h3>Você não vai acreditar ...</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adip
                                 isicing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua</p>
@@ -778,8 +765,7 @@ s
                    <div class=" d-flex m-2 p-5" style="color: #f7f7f7; background:rgba(0, 0, 0, 0.4)url(./image/blog_3.jpg); 
                     background-repeat: none; background-size: cover; background-blend-mode: darken; padding-top: 15%; padding-bottom: 15%;">
                         <div style="color: #ffffff;">
-                            <h3>Beauty & Clinic <br>
-                                Service</h3>
+                            <h3>5 coisas que você ...</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adip
                                 isicing elit, sed do eiusmod tempor incididunt
                                 ut labore et dolore magna aliqua</p>
@@ -793,9 +779,8 @@ s
 
     <div style="padding-left: 5%; text-align: left; background-image: url(./image/background_spa2.jpg); 
     background-repeat: none; background-size: cover; background-blend-mode: darken; padding-top: 15%; padding-bottom: 15%;">
-            <h3 class="pt-3 pb-3" style="font-size: 4vw; color: #000000;">GET IN TOUCH</h3>
-            <h5 class="pb-3 w-50" style="font-size: 3vw; color: #000000;">Join Our Email List And Be The First 
-                To Know About Specials, Events And More!</h5>
+            <h3 class="pt-3 pb-3" style="font-size: 4vw; color: #000000;">Entrar em contato</h3>
+            <h5 class="pb-3 w-50" style="font-size: 3vw; color: #000000;">Junte-se à nossa lista de e-mail e participe de promoções, eventos e muito mais!</h5>
             <input id="email" name="email" type="text" placeholder="seu email" style="font-size: 22px; ">
         </div>
     </div>
